# DragonRecipes

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.TXT  README.md  Version.h  build-all.sh  copy-version.sh  cxx-version.sh  dr-version.sh  format-code.sh
Castle/: App.cpp  App.h  CMakeLists.txt  Config.h  MainWindow.cpp  MainWindow.h  QtPainter.cpp  QtPainter.h  TreeGrid.cpp  TreeGrid.h  Version.cpp  Version.h  castle.icns  castle.sh  change-rpath.sh  copy-qt.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  make-bundle.sh  pre-build.sh  resource.qrc  uninstall-castle.sh
Castle/bundle/Contents/: Info.plist
Castle/data/: expressions.txt
Castle/icon/: compile-icon.sh  create-icon.sh  resize-squares.sh
DragonRecipes/: CMakeLists.txt
DragonRecipes/include/: DragonRecipes.h
DragonRecipes/include/DragonRecipes/: Brush.h  Cell.h  Color.h  Common.h  Constants.h  Error.h  Grammar.h  Lexer.h  Log.h  LogBuf.h  LogWriter.h  Node.h  NodeDim.h  Painter.h  Pen.h  Point.h  Production.h  Rect.h  Size.h  StringTools.h  Symbol.h  Test.h  TextCanvas.h  TextPainter.h  Token.h  Transform.h  Version.h
DragonRecipes/include/PrivateHeaders/: SymbolPrivate.h  Version.h
DragonRecipes/src/: Brush.cpp  Error.cpp  Grammar.cpp  Lexer.cpp  Log.cpp  LogWriter.cpp  Node.cpp  NodeDim.cpp  Production.cpp  Symbol.cpp  SymbolPrivate.cpp  Test.cpp  TextPainter.cpp  Token.cpp  Version.cpp
Knight/: CMakeLists.txt
Knight/include/: App.h  Version.h
Knight/src/: App.cpp  Version.cpp  main.cpp
castle/: CMakeLists.txt  change-rpath.sh  copy-qt.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
castle/icon/: resize-squares.sh
castle1/: AppIcon.icns  mainwindow.cpp  mainwindow.h  mainwindow.ui
castle1/icon/: copy-images.sh  make-assets-car.sh
castle1/icon/Assets.xcassets/AppIcon.appiconset/: Contents.json
dragonrecipes/: CMakeLists.txt
dragonrecipes/include/PrivateHeaders/: SymbolPrivate.h
dragonrecipes/include/dragonrecipes/: Grammar.h  Production.h  StringTools.h
dragonrecipes/src/: Grammar.cpp  Production.cpp  Symbol.cpp  SymbolPrivate.cpp  Test.cpp
dragonrecipes1/include/: dragonrecipes1.h
dragonrecipes1/src/: Token.cpp
knight/: CMakeLists.txt
knight/src/: main.cpp
knight1/src/: main.cpp
